# AOC23_Public

./: .gitignore  README.md
day_17/: .gitignore  CMakeLists.txt
day_17/diagrams/: mockup.drawio
day_17/src/: Algorithm.cpp  Algorithm.hpp  CMakeLists.txt  Day17Solver.cpp  Day17Solver.hpp  DummyLogger.hpp  FileLogger.cpp  FileLogger.hpp  GraphAdjacentList.cpp  GraphAdjacentList.hpp  GraphFileHandler.cpp  GraphFileHandler.hpp  IGraph.hpp  ILog.hpp  README.md  Utility.cpp  Utility.hpp  VectorOfFile.hpp  VectorToFile.hpp  data_example_path.txt  data_input_path.txt  main.cpp
day_17/tests/: Algorithm_unittest.cpp  CMakeLists.txt  Day17Solver_unittest.cpp  GraphAdjacentList_unittest.cpp  GraphFileHandler_unittest.cpp  VectorOfFile_unittest.cpp  graph.drawio
day_19/: CMakeLists.txt  README.md
day_19/doc/: Solution.md  coverage.md
day_19/doc/diagrams/: command.md  model_behavior.drawio  model_class.drawio
day_19/src/: CMakeLists.txt  Day19Solver.cpp  Day19Solver.hpp  PartCoordinator.cpp  PartCoordinator.hpp  ThreadCoordinator.cpp  ThreadCoordinator.hpp  ThreadsafeQueue.hpp  TraceException.hpp  Utility.cpp  Utility.hpp  UtilityTemplateImpl.hpp  Workflow.cpp  Workflow.hpp  WorkflowStringParser.cpp  WorkflowStringParser.hpp  WorkflowThread.cpp  WorkflowThread.hpp  main.cpp
day_19/src/filehandling/: CMakeLists.txt  FileLineHandler.cpp  FileLineHandler.hpp
day_19/src/logging/: CMakeLists.txt  CoutLogger.hpp  DummyLogger.hpp  FileLogger.cpp  FileLogger.hpp  ILog.hpp
day_19/src/measuring/: CMakeLists.txt  ElapsedTimer.cpp  ElapsedTimer.hpp
day_19/tests/: CMakeLists.txt
day_19/tests/integration/: CMakeLists.txt  Day19Solver_it.cpp  PartCoordinator_it.cpp  ThreadCoordinator_it.cpp  ThreadsafeQueue_it.cpp
day_19/tests/unit/: CMakeLists.txt  ElapsedTimer_ut.cpp  FileLineHandler_ut.cpp  PartCoordinator_ut.cpp  ThreadsafeQueue_ut.cpp  Utility_ut.cpp  WorkflowStringParser_ut.cpp  WorkflowThread_ut.cpp  Workflow_ut.cpp  data_input_test.txt  data_input_test_other_delimiter.txt
day_4/: CMakeLists.txt
day_4/diagrams/: classes.drawio  mockup.drawio
day_4/src/: CMakeLists.txt  CoutLogger.cpp  CoutLogger.hpp  Day4Solver.cpp  Day4Solver.hpp  DummyLogger.hpp  FileLogger.cpp  FileLogger.hpp  ILogger.hpp  README.md  ScratchCard.cpp  ScratchCard.hpp  ScratchCardParser.cpp  ScratchCardParser.hpp  main.cpp  utility.cpp  utility.hpp
day_4/tests/: CMakeLists.txt  Day4Solver_unittest.cpp  ScratchCardParser_unittest.cpp  ScratchCard_unittest.cpp  Utility_unittest.cpp  input_one_card.txt
day_5/: CMakeLists.txt
day_5/diagrams/: mockup.drawio
day_5/src/: CMakeLists.txt  CategoryMapInputFactory.cpp  CategoryMapInputFactory.hpp  CategoryMapLocalStorage.cpp  CategoryMapLocalStorage.hpp  Data_Example.cpp  Data_Example.hpp  Day5Solver.cpp  Day5Solver.hpp  DummyLogger.hpp  Excercise.md  FileLogger.cpp  FileLogger.hpp  ICategoryMap.hpp  ICategoryMapInputHandler.hpp  ILog.hpp  InputHandlerConstArray.cpp  InputHandlerConstArray.hpp  InputHandlerTextfile.cpp  InputHandlerTextfile.hpp  README.md  TextfileArray.cpp  TextfileArray.hpp  Utility.cpp  Utility.hpp  main.cpp
day_5/tests/: CMakeLists.txt  Day5Solver_unittest.cpp  ICategoryMap_unittest.cpp  InputHandlerTextfile_unittest copy.cpp
